--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,17 @@ asyncio==3.4.3
 python-dotenv==1.0.0
 openai==0.28.0
 gtts
+telegraph
+emojis
+deepai
+SpeechRecognition
 aiohttp== 3.9.3
 aiofiles
 yt_dlp
 youtube-search==2.1.2
 youtube-search-python==1.6.6
 pydub
+httpx
 wget
 ffmpeg-python==0.2.0
 beautifulsoup4
